# file-sharing

./: .gitignore  Cargo.toml  README.md
src/: connection_info.rs  main.rs  qr_code.rs  serve_file.rs
