[package]
name = "file-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.1"
qrcode-generator = "4.1.7"
tokio = { version = "1.26", features = ["full"] }
warp = "0.3.3"
