[package]
name = "file-sharing"
version = "0.1.1"
edition = "2021"
description = "An easy CLI file sharing software for local networks."
license-file = "LICENSE"
repository = "https://codeberg.org/Nydragon/file-sharing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
local-ip-address = "0.5.1"
qrcode-generator = "4.1.7"
tokio = { version = "1.26", features = ["full"] }
warp = "0.3.3"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
